update snippets section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Snippets Section -->
     <section id="snippets">
       <div class="section-container my-20">
-        <h3>Sistema Contable</h3>
+        <h3>Sistema Contable en Línea</h3>
         <p class="section-content mb-24 text-xl">
           Contamos con un Sistema Web moderno, que te permite obtener la
           información de tus procesos contables, control de tus pagos y
