--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <div class="flex items-center justify-between">
         <!-- Flex Container For Logo/Menu -->
         <div class="flex items-center space-x-20">
+          <!-- Logo -->
+          <img src="images/logo.png" alt="" class="h-8" />
           <!-- Left Menu -->
           <div class="hidden space-x-8 font-bold lg:flex">
             <a
