--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Flex Container For Logo/Menu -->
         <div class="flex items-center space-x-20">
           <!-- Logo -->
-          <img src="images/logo.png" alt="" class="h-8" />
+          <img src="images/logo.png" alt="" class="h-8 my-1" />
           <!-- Left Menu -->
           <div class="hidden space-x-8 font-bold lg:flex">
             <a
